changes to site

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,10 +67,12 @@
                     <li><a class="smoothscroll" href="#services" title="Services">Services</a></li>
                     <li><a class="smoothscroll" href="#portfolio" title="Works">Works</a></li>
                     <li><a href="mailto:#0" title="Contact us">Say Hello</a></li>
+
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
             <a href="#0" class="btn btn--stroke btn--small">Download CV</a>
+
 
         </div> <!-- end header-content -->
 
@@ -88,20 +90,22 @@
             <div class="column large-full">
 
                 <h1>
-                Hello, I'm John Doe, <br>
-                this page has been visited <a id="counter"></a> times
+                Hello, I'm Pavel Hrabec, <br>
+                Network & Information <br>
+                Security Analyst <br>
+                at Verizon in EMEA.
                 </h1>
 
 
                 <ul class="hero-social">
                     <li>
-                        <a href="#0" title="">Twitter</a>
+                        <a href="#0" title="">LinkedIn</a>
                     </li>
                     <li>
-                        <a href="#0" title="">Behance</a>
+                        <a href="#0" title="">GitHub</a>
                     </li>
                     <li>
-                        <a href="#0" title="">Dribbble</a>
+                        <a href="#0" title="">Visited<a id="counter"></a></a>
                     </li>
                 </ul> <!-- end hero-social -->
 
