changes to site

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,6 +94,7 @@
                 Network & Information <br>
                 Security Analyst <br>
                 at Verizon in EMEA.
+                Page visited <a id="counter"> times</a>
                 </h1>
 
 
@@ -104,9 +105,7 @@
                     <li>
                         <a href="#0" title="">GitHub</a>
                     </li>
-                    <li>
-                        <a href="#0" title="">Visited<a id="counter"></a></a>
-                    </li>
+
                 </ul> <!-- end hero-social -->
 
             </div> 
