repositions of counter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,17 +93,23 @@
                 Hello, I'm Pavel Hrabec, <br>
                 Network & Information <br>
                 Security Analyst <br>
-                at Verizon in EMEA.
-                Page visited <a id="counter"> times</a>
+                at Verizon in EMEA. <br>
+                <a id="counter"></a> 
                 </h1>
 
 
                 <ul class="hero-social">
                     <li>
-                        <a href="#0" title="">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/pavel-hrabec-0a918519b/" title="">LinkedIn</a>
                     </li>
                     <li>
-                        <a href="#0" title="">GitHub</a>
+                        <a href="https://github.com/Pavel-Hrabec/Azure-Resume-Challenge" title="">GitHub</a>
+                    </li>
+                    <li>
+                        <a id="counter"></a>
+                    </li>
+                    <li>
+                        <a href="#0" title="">Visits <a id="counter"></a></a>
                     </li>
 
                 </ul> <!-- end hero-social -->
