changes to links, photos, certifcation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Ceevee 2.0</title>
+    <title>PH</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
