added profile photo and edited initial picture on page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,10 +116,7 @@
     <section id="about" class="s-about target-section">
 
         <div class="row">
-            <div class="column large-3 tab-12">
-                <img class="s-about__pic" src="images/avatars/profile.jpg" alt="">
-            </div>
-            <div class="column large-9 tab-12 s-about__content">
+            <div class="column large-8 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
                     My journey in technology started in August 2019, when I’ve graduated with bachelor’s degree and passed interview for an engineering role in Verizon. 
@@ -129,12 +126,18 @@
                 <p>
                     After 4 months in my position I’ve actively started learning python to automate my daily tasks to be more efficient with my time. 
                     Eventually I’ve created python scripts for a whole team to improve our processes. 
-                    In 2021 I was able to transition into cybersecurity and I also successfully graduated with master’s degree. 
+                    In 2021 I was able to transition into cybersecurity as well as successfully finish my master's degree. 
                 </p>
                 <p>
                     Leading me to present, where I no longer have to split my focus, time and energy between University studies and work. 
                     Now I can fully dedicate my life towards my passion and grow like never before. 
                 </p>
+            </div>
+
+            <div class="column large-4 tab-12">
+                <p></p>
+                <img src="images/avatars/Profile Photo.jpg" 
+                srcset="images/avatars/Profile Photo.jpg 1x, images/avatars/Profile Photo.jpg 2x" alt="">
             </div>
 
         </div> <!-- end row -->
