Skills added to the site -only link to download CV is missing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -342,10 +342,14 @@
                 <div class="resume-block">
 
                     <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        I consider myself as an expert only in my ability to learn new things. 
+                        I firmly believe in reasoning from the first principle and I’ve developed complex protocols in particular way to push my learning sessions to the limits. 
+                        This allows me to pick up new skills and adapt to different situations incredibly fast. 
+                    </p>
+                    <p>
+                        Otherwise I wouldn’t say that I’ve mastered anything. 
+                        To be said, I’m not trying to dig incredible deep into topics as my goal is more align with good broad knowledge in many skills. 
+                        You can see some of them below.
                     </p>
 
                     <ul class="skill-bars-fat">
@@ -385,10 +389,12 @@
                         <div class="progress percent30"></div>
                         <strong>Terraform</strong>
                         </li>
+                        <!-- 
                         <li>
                         <div class="progress percent10"></div>
                         <strong>Kubernetes</strong>
                         </li>
+                        -->
                     </ul>
 
                 </div> <!-- end resume-block -->
