--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,7 +76,7 @@
 
                 <div class="s-hero__content-about">
 
-                    <h1>Hi, I'm Pavel Hrabec</h1>
+                    <h1>Hi, I'm Pavel</h1>
 
                     <h3>
                     I work as <span>Network & Information Security Analyst </span> at Verizon.
