added Az-305 certification on site

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -304,7 +304,7 @@
                         </div>                   
                         <div class="column large-3 tab-12">
                             <a href="https://www.credly.com/badges/ace56452-3e99-42b3-a6e0-13ae728dd200">
-                                <img src="images/certifications/AZ-305.png">
+                                <img src="images/certifications/AZ-500.png">
                             </a>
                         </div>
                     </div>
@@ -329,7 +329,30 @@
                                 <img src="images/certifications/AZ-104.png">
                             </a>
                         </div>
-                    </div>             
+                    </div>
+                    
+                    <div class="row">
+                        <div class="column large-9 tab-12">
+                            <div class="resume-block__header">
+                                <h4 class="h3">Azure Solutions Architect Expert</h4>
+                                <p class="resume-block__header-meta">
+                                    <span>Issued by Microsoft</span> 
+                                    <span class="resume-block__header-date">
+                                        April 2022 - April 2023
+                                    </span>
+                                    <p>
+                                        Earning the Azure Solutions Architect Expert certification demonstrates subject matter expertise in designing cloud and hybrid solutions that run on Microsoft Azure, including compute, network, storage, monitoring, and security. Candidates have advanced experience and knowledge across IT operations, including networking, virtualization, identity, security, business continuity, disaster recovery, data platforms, and governance.
+                                    </p>
+                                </p>
+                            </div>
+                        </div>                   
+                        <div class="column large-3 tab-12">
+                            <a href="https://www.credly.com/badges/809cdd2e-6d11-4e12-bafe-dd4f9e80fbf0">
+                                <img src="images/certifications/AZ-305.png">
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div> <!-- end resume-block -->
         </div> <!-- s-resume__section -->
