overwrite added to edit storage account in Azure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -478,7 +478,7 @@
                     <h5>Cloud Resume Challenge in Azure</h5>
                     <p>The Cloud Resume Challenge incorporates many of the skills that real cloud and DevOps engineers use in their daily work.</p>
                     <ul class="modal-popup__cat">
-                        <li>Azure, HTML, CSS, API, Functions, CI/CD, Python, CDN, CosmosDB</li>
+                        <li>Azure, HTML, CSS, API, Functions, CI/CD, Python, YAML, CDN, CosmosDB</li>
                     </ul>
                 </div>
                 <a href="https://github.com/Pavel-Hrabec/Azure-Resume-Challenge" class="modal-popup__details">Project link</a>
