Azure DevOps: Provision API Infrastructure with Terraform project added to website

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -529,7 +529,7 @@
     
                 <div class="modal-popup__desc">
                     <h5>Azure DevOps: Provision API Infrastructure with Terraform</h5>
-                    <p>API, Docker and Terraform files developed locally with Visual Studio Code pushed to GitHub. GitHub triggers build in Azure DevOps, which will build and push docker image to Docker Hub and provision services to Azure cloud with Terraform.  </p>
+                    <p>API, Docker and Terraform files developed locally with Visual Studio Code pushed to GitHub will trigger pipeline in Azure DevOps, which will build and push docker image to Docker Hub and provision services to Azure with Terraform.</p>
                     <ul class="modal-popup__cat">
                         <li>Terraform, Azure Pipelines, Key Vault, YAML, Docker, API</li>
                     </ul>
