--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
                     <h3>
                     I work as a <span>Network & Information Security Analyst </span> at Verizon.
                     Site was created as part of the Cloud Resume Challenge and was visited <a id="counter"></a> times.
-                    <p>If you want to learn more <a class="smoothscroll" href="#about">about me</a> and my skill, <a class="smoothscroll" href="#about">start scrolling</a>.</p>
+                    If you want to learn more <a class="smoothscroll" href="#about">about me</a> and my skill, <a class="smoothscroll" href="#about">start scrolling</a>.
                     </h3>
 
                     <div class="s-hero__content-social">
