added project on site and edited skills section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -371,10 +371,9 @@
                     </p>
                     <p>
                         Otherwise I wouldn’t say that I’ve mastered anything. 
-                        To be said, I’m not trying to dig incredible deep into topics as my goal is more aligned with good broad knowledge in many skills. 
-                        You can see some of them below.
+                        To be said, I’m not trying to dig incredible deep into topics as my goal is more aligned with good broad knowledge in many skills, which includes networking, Python, problem solving, SPL language, Terraform, troubleshooting and experience with QRadar.
                     </p>
-
+                    <!--
                     <ul class="skill-bars-fat">
                         <li>
                         <div class="progress percent100"></div>
@@ -411,8 +410,7 @@
                         <li>
                         <div class="progress percent40"></div>
                         <strong>Terraform</strong>
-                        </li>
-                        <!-- 
+                        </li>                  
                         <li>
                         <div class="progress percent10"></div>
                         <strong>Kubernetes</strong>
@@ -469,6 +467,14 @@
                     <img src="images/projects/Azure DevOps API Infrastructure Provisioning with Terraform.png" 
                          srcset="images/projects/Azure DevOps API Infrastructure Provisioning with Terraform.png, 
                          images/projects/Azure DevOps API Infrastructure Provisioning with Terraform.png" alt="">
+                </a>             
+            </div> <!-- end folio-item -->
+
+            <div class="column folio-item">
+                <a href="#modal-05" class="folio-item__thumb">
+                    <img src="images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png" 
+                         srcset="images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png, 
+                         images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png" alt="">
                 </a>             
             </div> <!-- end folio-item -->
 
@@ -538,6 +544,21 @@
             </div>
         </div> <!-- end modal -->
         
+        <div id="modal-05" hidden>
+            <div class="modal-popup">
+                <img src="images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png" alt="" />
+    
+                <div class="modal-popup__desc">
+                    <h5>Automating Infrastructure Deployments in Azure with Terraform and Azure Pipelines</h5>
+                    <p>Multiple Terraform modules developed locally with Visual Studio Code pushed to GitHub will trigger pipeline in Azure DevOps, which will build hub and spoke topology, network security groups and kubernetes cluster with web server in Azure.</p>
+                    <ul class="modal-popup__cat">
+                        <li>Terraform, Azure Pipelines, Key Vault, YAML, Kubernetes, API, NSG</li>
+                    </ul>
+                </div>
+                 <a href="https://github.com/Pavel-Hrabec/Automating-Infrastructure-Deployments-in-Azure-with-Terraform-and-Azure-Pipelines" class="modal-popup__details">Project link</a>
+            </div>
+        </div> <!-- end modal -->
+
     </section> <!-- end s-portfolio -->
 
     <!-- contact
