added resume on site and edited some text on frontpage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
                     
                 </div> <!-- end s-hero__content-about -->
                 <div class="s-hero__content-social">
-                <a href="#0" class="btn btn--stroke btn--small">Download CV</a>
+                <a href="./Pavel_Hrabec_Resume.pdf" class="btn btn--stroke btn--small">Download CV</a>
                 </div>
             </div>
         </div> <!-- s-hero__content -->
@@ -199,13 +199,13 @@
                     <div class="resume-block__header">
                         <h4 class="h3">Silesian University in Opava</h4>
                         <p class="resume-block__header-meta">
-                            <span>Master's degree in Computer/Information Technology Administration and Management</span> 
+                            <span>Master's degree in System Engineering and Informatics</span> 
                             <span class="resume-block__header-date">
                                 June 2021
                             </span>
                         </p>
                         <p class="resume-block__header-meta">
-                            <span>Bachelor's degree in Computer/Information Technology Administration and Management</span> 
+                            <span>Bachelor's degree in System Engineering and Informatics</span> 
                             <span class="resume-block__header-date">
                                 August 2019
                             </span>
@@ -370,8 +370,11 @@
                         This allows me to pick up new skills and adapt to different situations incredibly fast. 
                     </p>
                     <p>
-                        Otherwise I wouldn’t say that I’ve mastered anything. 
-                        To be said, I’m not trying to dig incredible deep into topics as my goal is more aligned with good broad knowledge in many skills, which includes networking, Python, problem solving, SPL language, Terraform, troubleshooting and experience with QRadar.
+                        Otherwise I wouldn’t say that I’ve mastered anything as I’m not trying to dig incredible deep into topics.
+                        My goal is more aligned with good broad knowledge in many skills.
+                        To be said, I'm excellent at self-development, troubleshooting and great at communication.
+                        Proficient with networking technologies, Python, Azure services, QRadar platform and familiar with SPL, HTML/CSS, UNIX systems, Git and Terraform.
+
                     </p>
                     <!--
                     <ul class="skill-bars-fat">
@@ -607,7 +610,7 @@
 
                     <div class="column large-12">
                         <div class="s-hero__content-social">
-                            <a href="#0" class="btn btn--stroke btn--small">Download CV</a>
+                            <a href="./Pavel_Hrabec_Resume.pdf" class="btn btn--stroke btn--small">Download CV</a>
                         </div>
                     </div>
                 </div> <!-- end contact-infos -->
