added resume on site and edited some text on frontpage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -167,8 +167,9 @@
                     </div>
 
                     <p>
-                    Supporting critical European customer as an incident responder in advanced security center. 
-                    Determining the scope of attacks with SIEM tools (Splunk and Qradar) and leveraging XSOAR platform to respond in real-time to threats.
+                        Supporting critical European customer as a security analyst in advanced security center with hundreds of daily incidents. <br>
+                        Determining the scope of attacks with SIEM tools (Splunk and Qradar) and leveraging XSOAR platform to respond in real-time to threats. <br>
+                        Providing necessary information to automate non malicious threats and decrease workload for the team. <br>
                     </p>
 
                     <div class="resume-block__header">
@@ -181,9 +182,13 @@
                     </div>
 
                     <p>
-                    Part of a dedicated team supporting a major UK customer with over 11 000 managed locations. Troubleshooting, testing and replacing network infrastructure. 
-                    Developed Python scripts to generate reports in order to improve communication with customer as well as effectively troubleshoot major outages to get precise scale of impact on business and resolve incident in faster manner to improve MTTR.
-                    </p>
+                        Part of dedicated team supporting a major UK customer with over 11000 managed locations and 14000 devices. <br>
+                        Troubleshooting, testing and replacing network infrastructure with routers, switches, access points, firewalls and VPN concentrators. <br>
+                        Automated significant portion of daily tasks to reduce time for investigation by 30% and therefore increased number of processed incidents per day. <br>
+                        Created tool to generate daily reports to provide reliable and precise information about current state of incidents for the past 24 hours. <br>
+                        Developed Python script to effectively troubleshoot major outages, significantly decreased time to investigate scale of an outage by 70% and improved MTTR. <br>
+                        Improved processes for communication with customer to further drive satisfaction with a service. <br>
+                        </p>
     
                 </div> <!-- end resume-block -->
             </div>
