edited front page with certification and project

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -358,6 +358,28 @@
                         </div>
                     </div>
 
+                    <div class="row">
+                        <div class="column large-9 tab-12">
+                            <div class="resume-block__header">
+                                <h4 class="h3">Security Operations Analyst Associate</h4>
+                                <p class="resume-block__header-meta">
+                                    <span>Issued by Microsoft</span> 
+                                    <span class="resume-block__header-date">
+                                        July 2022 - July 2023
+                                    </span>
+                                    <p>
+                                        Earning Security Operations Analyst Associate certification validates the skills and knowledge needed to reduce organizational risk by rapidly remediating active attacks on the environment, advising on improvements to threat protection practices, and referring violations of organizational policies to appropriate stakeholders. Candidates investigate, respond to, and hunt for threats using Microsoft Azure Sentinel, Azure Defender, Microsoft 365 Defender, and third-party security products.
+                                    </p>
+                                </p>
+                            </div>
+                        </div>                   
+                        <div class="column large-3 tab-12">
+                            <a href="https://www.credly.com/badges/4b167ba6-d237-4bec-897e-ad7191d0ab6d">
+                                <img src="images/certifications/SC-200.png">
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div> <!-- end resume-block -->
         </div> <!-- s-resume__section -->
@@ -480,9 +502,9 @@
 
             <div class="column folio-item">
                 <a href="#modal-05" class="folio-item__thumb">
-                    <img src="images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png" 
-                         srcset="images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png, 
-                         images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png" alt="">
+                    <img src="images/projects/Microsoft Sentinel Content Delivery from Repository.png" 
+                         srcset="Microsoft Sentinel Content Delivery from Repository.png, 
+                         images/projects/Microsoft Sentinel Content Delivery from Repository.png" alt="">
                 </a>             
             </div> <!-- end folio-item -->
 
@@ -554,16 +576,16 @@
         
         <div id="modal-05" hidden>
             <div class="modal-popup">
-                <img src="images/projects/Automating Infrastructure Deployments in Azure with Terraform and-Azure Pipelines.png" alt="" />
+                <img src="images/projects/Microsoft Sentinel Content Delivery from Repository.png" alt="" />
     
                 <div class="modal-popup__desc">
-                    <h5>Automating Infrastructure Deployments in Azure with Terraform and Azure Pipelines</h5>
-                    <p>Multiple Terraform modules developed locally with Visual Studio Code pushed to GitHub will trigger pipeline in Azure DevOps, which will build hub and spoke topology, network security groups and kubernetes cluster with web server in Azure.</p>
+                    <h5>Microsoft Sentinel Content Delivery from Repository</h5>
+                    <p>Microsoft Sentinel content includes many components such as analytics rules, automation rules, hunting queries, playbooks, workbooks and more. Project allows scalable solution for content delivery from repository. </p>
                     <ul class="modal-popup__cat">
-                        <li>Terraform, Azure Pipelines, Key Vault, YAML, Kubernetes, API, NSG</li>
+                        <li>GitHub Actions, ARM, Sentinel, Analytics rules, Automation rules, Hunting queries, Playbooks, Workbooks</li>
                     </ul>
                 </div>
-                 <a href="https://github.com/Pavel-Hrabec/Automating-Infrastructure-Deployments-in-Azure-with-Terraform-and-Azure-Pipelines" class="modal-popup__details">Project link</a>
+                 <a href="https://github.com/Pavel-Hrabec/Sentinel-Automation" class="modal-popup__details">Project link</a>
             </div>
         </div> <!-- end modal -->
 
